test_apps/test-typechecker/fail/ac/predicateboolexp.app
application test

section predicate

predicate foo(i:Int){
  i  
}